--- a/index.html
+++ b/index.html
@@ -11,9 +11,38 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
-
+ 
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="#">Gallery</a>
+            </li>
+            <li>
+                <a href="#">Sign Up</a>
+            </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        running locations, distances and times
+    </section>
+    <footer>
+        social links here
+    </footer>
 </body>
 
 </html>
